--- a/public/css/main.css
+++ b/public/css/main.css
@@ -49,8 +49,11 @@ h2{
 }
 
 .iconos{
+    width: 15%;
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
+    
 }
 
 .barraIzq{
