--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -1,3 +1,10 @@
 /* ********* */
 /* @VARIABLES */
 /* ********* */
+
+  $colores: (
+    principal: #200063,
+    secundario: #150043,
+    texto-principal: #FFFFFF,
+    texto-secundario: #DDDDDD
+  );
