--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,3 +1,9 @@
 /* ********* */
 /* @MIXINS */
 /* ********* */
+
+@mixin cajas{
+    height: 52px;
+    width: 40%;
+    background-color: map-get($colores, secundario);
+}
